Added basic speed functionality to the system.
I really have no idea what is going on here, this is based off my reading of libraries and looking at examples of code, but this should let us simulate speed at a very basic level.

Big issue though take
'Vector3f GROUND_SIZE_HALF = new Vector3f(100f, 0.5f, 100f);' this defines the shape of the world the car is moving through right now. It's just a  flat sorta floor. Obviously this needs to be changed.

The car is also just a 3D box, not anything intersting.

--- a/CapstoneProject/pom.xml
+++ b/CapstoneProject/pom.xml
@@ -14,4 +14,38 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jme3</id>
+            <url>https://nexus.jmonkeyengine.org/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jmonkeyengine</groupId>
+            <artifactId>jme3-core</artifactId>
+            <version>3.5.2-stable</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jmonkeyengine</groupId>
+            <artifactId>jme3-desktop</artifactId>
+            <version>3.5.2-stable</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jmonkeyengine</groupId>
+            <artifactId>jme3-lwjgl3</artifactId>
+            <version>3.5.2-stable</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.stephengold</groupId>
+            <artifactId>Minie</artifactId>
+            <version>7.7.0</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
