--- a/CapstoneProject/pom.xml
+++ b/CapstoneProject/pom.xml
@@ -45,7 +45,15 @@
             <artifactId>Minie</artifactId>
             <version>7.7.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.stephengold</groupId>
+            <artifactId>Heart</artifactId>
+            <version>8.7.0</version>
+        </dependency>
     </dependencies>
+
+
 
 
 </project>
