--- a/CapstoneProject/pom.xml
+++ b/CapstoneProject/pom.xml
@@ -69,6 +69,11 @@
             <version>4.12.0</version>
         </dependency>
         <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.9</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
