added caching to TechnicalSubsystemController

--- a/CapstoneProject/cache_config.properties
+++ b/CapstoneProject/cache_config.properties
@@ -1,8 +1,15 @@
-# Maximum cached entries
+# Cache Manager Configuration
+
+# Maximum number of locations to cache
+# Higher values = more memory usage but better hit rates
 max.cache.size=100
 
-# Preload distance (meets requirement: ?2km)
+# Distance ahead to preload road data (in kilometers)
+# Higher values = more API calls but smoother experience
 preload.distance.km=2.0
 
-# Cache expiration time (1 hour)
+# Maximum age of cached data (in milliseconds)
+# 3600000 = 1 hour
+# 1800000 = 30 minutes
+# Lower values ensure fresher data but more API calls
 max.cache.age.ms=3600000
