--- a/CapstoneProject/pom.xml
+++ b/CapstoneProject/pom.xml
@@ -47,6 +47,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.kwhat</groupId>
+            <artifactId>jnativehook</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.stephengold</groupId>
             <artifactId>Heart</artifactId>
             <version>8.7.0</version>
